<resources>
    <string name="app_name">CW2</string>
    <string name="home1">Reminders</string>
    <string name="Movements">Movements</string>
    <string name="back">Back</string>
    <string name="Finish">Finish</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Type">Type</string>
    <string name="Walking">Walking</string>
    <string name="Running">Running</string>
    <string name="Cycling">Cycling</string>
    <string name="Name">Name</string>
    <string name="Today_Run">Today\'s Run</string>
    <string name="Map">View of the Movement in a Map</string>
    <string name="Start_Recording">Start Recording</string>
    <string name="Stop_Recording">Stop Recording</string>
    <string name="Radius">Radius</string>
    <string name="Default_Radius">100</string>
    <string name="Map_reminder">View of the reminder in the map.</string>
    <string name="Place">Place</string>
    <string name="Cancel">Cancel</string>
    <string name="Add">Add</string>
    <string name="New_Movement">New Movement</string>
    <string name="New_Reminder">New Reminder</string>
    <string name="Colour">Pick Colour:</string>
    <string name="White">White</string>
    <string name="Green">Green</string>
    <string name="Red">Red</string>
    <string name="Settings">Settings</string>
    <string name="Edit">Edit</string>
    <string name="Quick_View">Quick View</string>
    <string name="A_Reminder">A reminder</string>
    <string name="NameVal">%s</string>
    <string name="RadiusVal">Radius: %s</string>
    <string name="TypeVal">Type: %s</string>
    <string name="Delete">Delete</string>
    <string name="View">View</string>
    <string name="Wrong_Perm">This app requires location functionality to perform. Due to rejection the location handling cannot work!</string>
    <string name="Permission_Explain">This app requires location functionality to perform. You will be asked to allow gps. Refusing this will prevent the app from functioning. It is recommended to use precise for my accurate maps.</string>
    <string name="Permission_Explain_Fine"> Finer location matching will help with accuracy and ease of use.</string>
    <string name="Permission_Explain_Background"> Background location permissions allow route tracking.</string>
    <string name="Permission_Title">Permission Alert</string>
    <string name="Selected_Type">Selected Type: %s</string>
    <string name="PlaceLocate">Place On Your Location</string>
    <string name="cName">C1</string>
    <string name="cDesc">C1 for geofence</string>
    <string name="enterGeoFence">Entered a GeoFence!</string>
    <string name="exitedGeoFence">Exited a GeoFence!</string>
    <string name="Watch_Geofences">Start Watching Reminder Geofences</string>
    <string name="Stop_Geofences">Stop Watching Reminder Geofences</string>
    <string name="Observations">Observations</string>
    <string name="Reminders">Session Reminders: %s</string>
    <string name="RoutesToday">Routes Today: %s</string>
    <string name="RemindersToday">Placed Reminders Today: %s</string>
    <string name="Save">Save</string>
</resources>